...
    val imageUrl: Int,
    val category: String,
    val readTimeMinutes: Int
)

sealed class BottomNavItem(val route: String, val icon: ImageVector, val label: String) {
    object Home : BottomNavItem("home", Icons.Filled.Home, "Home")
    object Messages : BottomNavItem("messages", Icons.Filled.MailOutline, "Messages")
    object Schedule : BottomNavItem("schedule", Icons.Filled.DateRange, "Schedule")
    object Profile : BottomNavItem("profile", Icons.Filled.Person, "Profile")
}


@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun HomeScreen(
...
) {
    var showDevelopmentDialog by remember { mutableStateOf(false) }
    val developmentMessage = "Fitur ini masih dalam pengembangan."

    TopAppBar(
        title = {
            Text("Medics App", fontWeight = FontWeight.Bold)
        },
        actions = {
            IconButton(
                onClick = {showDevelopmentDialog = true}) {
                Icon(Icons.Filled.NotificationsNone, contentDescription = "Notifications")
            }
...
fun MessagesTopAppBar() {
    TopAppBar(
        title = {
            Text(
                "Messages",
                fontWeight = FontWeight.Bold,
                modifier = Modifier.testTag("MessagesScreenHeader")
            )
        },
        actions = {
            IconButton(onClick = { }) {
                Icon(Icons.Filled.Search, contentDescription = "Search")
            }
...
            HealthArticle("art5", "The Importance of Regular Check-ups", R.drawable.article_2, "Healthcare", 5)
        )
    }

    val topDoctorsSample = remember {
        listOf(
            Doctor(
                id = "doc1",
                name = "Dr. Marcus Horizon",
                specialization = "Dental Specialist",
                imageRes = R.drawable.marcus,
                hospital = "Singaparna Hospital",
                rating = 4.7f,
...
        }
        Spacer(modifier = Modifier.height(24.dp))

        Column(modifier = Modifier.fillMaxWidth())
        {
            SectionHeader(
                title = "Top Doctors",
                onSeeAllClicked = onSeeAllDoctorsClicked
            )
            Spacer(modifier = Modifier.height(12.dp))
            TopDoctorsList(
                doctors = topDoctorsSample,
                onDoctorCardClicked = onDoctorCardClicked
...
            text = title,
            fontSize = 18.sp,
            fontWeight = FontWeight.SemiBold,
            color = MaterialTheme.colorScheme.onSurface
        )
        TextButton(onClick = onSeeAllClicked) {
            Text("See All", color = Color(0xFF008080))
        }
    }
}


@Composable
...
