...
            modifier = Modifier
                .fillMaxWidth(0.45f)
                .aspectRatio(0.6f)
        )

        Text(
            text = "Let's get started!",
            fontSize = 24.sp,
            fontWeight = FontWeight.Bold,
            color = Color.Black,
            modifier = Modifier.padding(bottom = 32.dp)
        )

...
                .padding(vertical = 6.dp),
            colors = ButtonDefaults.buttonColors(
                containerColor = Color(0xFF008080),
                contentColor = Color.White
            )
        ) {
            Text(text = "Login", fontSize = 16.sp)
        }

        Button(
            onClick = onSignUpClicked,
            modifier = Modifier
                .fillMaxWidth()
...
